tests/kyverno/block-hostpath/resources/pod-with-hostpath.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-with-hostpath
spec:
  containers:
    - name: app
      image: busybox:1.36
  command: ["sh","-c","sleep 3600"]
  volumes:
    - name: hp
      hostPath:
        path: /var/run
        type: Directory
