tests/kyverno/block-hostpath/resources/pod-without-hostpath.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-without-hostpath
spec:
  containers:
    - name: app
      image: busybox:1.36
  command: ["sh","-c","sleep 3600"]
