tests/kyverno/block-hostpath/test.yaml
name: block-hostpath
policies:
  - ../../../addons/kyverno/policies/block-hostpath.yaml
resources:
  - resources/pod-with-hostpath.yaml
  - resources/pod-without-hostpath.yaml
results:
  - resource: pod-with-hostpath
    kind: Pod
    policy: block-hostpath
    rule: forbid-hostpath
    result: fail
    message: hostPath volumes are not allowed
  - resource: pod-without-hostpath
    kind: Pod
    policy: block-hostpath
    rule: forbid-hostpath
    result: pass
